aded links page. empty

--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
 						<li>2 step save</li>
 					</ul>
 				</section>
+				<section>
+					<h2>Links</h2>
+				</section>
 			</div>
 		</div>
 
