added link to redux dev tools

--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
 							<a href="https://dj-rest-auth.readthedocs.io/en/latest/">Dj Rest Auth</a>
 						</li>
 						<li><a href="https://redux.js.org/tutorials/essentials/part-1-overview-concepts">Official redux tutorial</a></li>
+						<li><a href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux dev tools</a></li>
 
 						<li><a href="https://github.com/redux-saga/redux-saga">Redux Saga</a> </li>
 						<li><a href="https://github.com/sheenarbw/redux-django-rest-framework">
