--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						JS Frontend framework agnostic state management
 					</h3>
 				</section>
-				<section>
+				<!-- <section>
 					<h2>
 						Hi, I'm <a href="mailto:sheena.oconnell@umuzi.org"> Sheena </a>
 					  </h2>
@@ -55,9 +55,7 @@
 						<tr>
 						  <td style="vertical-align: top">
 							<ul>
-							  <li class="fragment">
-								@sheena <a href="https://zatech.co.za/">ZATech Slack</a>
-							  </li>
+
 							  <li class="fragment">
 								CTO of <a href="http://umuzi.org/">Umuzi</a>
 							  </li>
@@ -77,7 +75,7 @@
 						  </td>
 						</tr>
 					  </table>
-				</section>
+				</section> -->
 				<section>
 					<h3>Why I'm talking about this</h3>
 				</section>
