put hello slide back

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						JS Frontend framework agnostic state management
 					</h3>
 				</section>
-				<!-- <section>
+				<section>
 					<h2>
 						Hi, I'm <a href="mailto:sheena.oconnell@umuzi.org"> Sheena </a>
 					  </h2>
@@ -75,12 +75,15 @@
 						  </td>
 						</tr>
 					  </table>
-				</section> -->
+				</section>
 				<section>
 					<h3>Why I'm talking about this</h3>
 				</section>
 				<section>
 					<h2>Django in brief</h2>
+
+
+
 						<ul>
 							<li class="fragment">Workhorse - not the new kid on the block</li>
 							<li class="fragment">For perfectionists with deadlines</li>
